--- a/html/viewReservations.html
+++ b/html/viewReservations.html
@@ -10,6 +10,28 @@
       integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk"
       crossorigin="anonymous"
     />
+    <link rel="stylesheet" href="style.css" />
+    <script src="https://kit.fontawesome.com/c502137733.js"></script>
   </head>
-  <body></body>
+  <body>
+    <container>
+      <div class="jumbotron">
+        <h1 class="display-4 text-center">
+          <strong><i class="fas fa-fire mr-2"></i>&nbsp;Hot Restaurant!</strong>
+        </h1>
+        <hr class="my-4" />
+        <h3 class="text-center">
+          Current Reservations and Waiting List
+        </h3>
+        <p>
+            <a class="btn btn-danger btn-lg my-3 text-center" id="makeRes" href="makereservations.html" role="button"
+          >
+          <i class="fas fa-utensils mr-2"></i>&nbsp;Make Reservation
+        </a>
+        <a class="btn btn-outline-dark btn-lg my-3 text-center" id="home" href="home.html" role="button" >
+            <i class="fas fa-home mr-2"><i>&nbsp;</a>
+        </p>
+    </div>
+    </container>
+  </body>
 </html>
