correct nav links in the 3 html pages; updated index.html file name

--- a/html/index.html
+++ b/html/index.html
@@ -20,12 +20,12 @@
         <br />
 
         <div class="text-center">
-          <a href="/viewReservations.html"
+          <a href="viewReservations.html"
             ><button id="tables" type="button" class="btn btn-lg btn-primary">
               <span class="glyphicon glyphicon-list-alt"></span> View Tables
             </button></a
           >
-          <a href="/makeReservations.html"
+          <a href="makeReservations.html"
             ><button id="reserve" type="button" class="btn btn-lg btn-danger">
               <span class="glyphicon glyphicon-credit-card"></span> Make Reservation
             </button></a
