--- a/html/viewReservations.html
+++ b/html/viewReservations.html
@@ -22,12 +22,12 @@
         <br />
 
         <div class="text-center">
-          <a href="/makeReservations.html"
+          <a href="makeReservations.html"
             ><button type="button" class="btn btn-lg btn-danger">
               <span class="glyphicon glyphicon-credit-card"></span> Make Reservation
             </button></a
           >
-          <a href="/home.html"
+          <a href="home.html"
             ><button type="button" class="btn btn-lg btn-primary">
               <span class="glyphicon glyphicon-list-alt"></span> Home
             </button></a
