--- a/html/index.html
+++ b/html/index.html
@@ -20,7 +20,7 @@
         <br />
 
         <div class="text-center">
-          <a href="viewReservations.html"
+          <a href="tables.html"
             ><button id="tables" type="button" class="btn btn-lg btn-primary">
               <span class="glyphicon glyphicon-list-alt"></span> View Tables
             </button></a
