renames makeReservations.html to reserve.html

--- a/html/index.html
+++ b/html/index.html
@@ -25,7 +25,7 @@
               <span class="glyphicon glyphicon-list-alt"></span> View Tables
             </button></a
           >
-          <a href="makeReservations.html"
+          <a href="reserve.html"
             ><button id="reserve" type="button" class="btn btn-lg btn-danger">
               <span class="glyphicon glyphicon-credit-card"></span> Make Reservation
             </button></a
