--- a/html/tables.html
+++ b/html/tables.html
@@ -22,7 +22,7 @@
         <br />
 
         <div class="text-center">
-          <a href="makeReservations.html"
+          <a href="reserve.html"
             ><button type="button" class="btn btn-lg btn-danger">
               <span class="glyphicon glyphicon-credit-card"></span> Make Reservation
             </button></a
