Updated footer elements on html pages and tables/waitlist for reserve.html

--- a/reserve.html
+++ b/reserve.html
@@ -78,7 +78,11 @@
 
       <footer class="footer">
         <div class="container">
-          <p><a href="/api/tables">API Table Link</a> | <a href="/api/waitlist">API Wait List</a></p>
+          <p>Control Panel</p>
+          <p>
+            <a id="clear" href="#">Clear Tables</a> | <a href="/api/tables">API Table Link</a> |
+            <a href="/api/waitlist">API Wait List</a>
+          </p>
         </div>
       </footer>
     </div>
